# cw-academy-course

./: LICENCE  README.md
counting-contract/: .gitignore  Cargo.toml
counting-contract-0.2/: Cargo.toml
counting-contract-0.2/.cargo/: config
counting-contract-0.2/examples/: schema.rs
counting-contract-0.2/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
counting-contract-0.2/src/multitest/: contract.rs  tests.rs
counting-contract-0.3/: Cargo.toml
counting-contract-0.3/src/: contract.rs  lib.rs  msg.rs  state.rs
counting-contract-0.3/src/multitest/: contract.rs  tests.rs
counting-contract/.cargo/: config
counting-contract/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
counting-contract/src/multitest/: contract.rs  tests.rs
