[package]
name = "counting-contract"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-std = "1.0.0"
cw-multi-test = { version = "0.15.0", optional = true }
cw-storage-plus = "0.15.0"
schemars = "0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.33"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
counting-contract-0_1 = { path = "../counting-contract", package = "counting-contract", features = ["tests"] }
cw-multi-test = "0.15.0"
