[package]
name = "counting-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.1.1"
cosmwasm-std = "1.1.2"
cw-multi-test = { version = "0.15.0", optional = true }
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
schemars = "0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"

[dev-dependencies]
cw-multi-test = "0.15.0"

